@@ -3,6 +3,7 @@
 2011/xx/xx ver 0.3.3
    - adopt NVI (Non-Virtual Interface)
        - see "Effective C++"
+   - replace gluBuild2DMipmaps() by GL_GENERATE_MIPMAP
    - fix Appearance::setTexture()
    - fix IndexBuffer::getIndexCount() and getIndices()
    - fix Object3D::find()
